force-app/main/default/objects/CustomProductPictogram__c/CustomProductPictogram__c.object-meta.xml
<CustomObject>
    <description>Objet permettant de stocker les URL pour les pictogrammes personnalisés des produits</description>
    <label>Pictogramme personnalisé</label>
    <nameField>
        <displayFormat>CPP/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pictogrammes personnalisés</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>