force-app/main/default/objects/CustomProductPictogram__c/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <label>ID tiers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>