force-app/main/default/objects/CustomProductPictogram__c/fields/leaf__c.field-meta.xml
<CustomField>
    <fullName>leaf__c</fullName>
    <label>Nombre de vantaux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NbVantaux</valueSetName>
    </valueSet>
</CustomField>