force-app/main/default/objects/CustomProductPictogram__c/fields/pictogramFileLink__c.field-meta.xml
<CustomField>
    <fullName>pictogramFileLink__c</fullName>
    <label>Lien vers le fichier picto</label>
    <required>true</required>
    <type>Url</type>
</CustomField>