force-app/main/default/objects/CustomProductPictogram__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pictogrammes personnalisés</relationshipLabel>
    <relationshipName>Pictogrammes_personnalises</relationshipName>
    <type>Lookup</type>
</CustomField>