force-app/main/default/objects/CustomProductPictogram__c/fields/productOptionLevel1__c.field-meta.xml
<CustomField>
    <fullName>productOptionLevel1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code option niveau 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pictogrammes personnalisés (Code option niveau 1)</relationshipLabel>
    <relationshipName>Pictogrammes_personnalis_s</relationshipName>
    <type>Lookup</type>
</CustomField>