force-app/main/default/objects/CustomProductPictogram__c/fields/productOptionLevel2__c.field-meta.xml
<CustomField>
    <fullName>productOptionLevel2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code option niveau 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pictogrammes personnalisés (Code option niveau 2)</relationshipLabel>
    <relationshipName>Pictogrammes_personnalis_s1</relationshipName>
    <type>Lookup</type>
</CustomField>