force-app/main/default/objects/CustomProductPictogram__c/fields/productOptionLevel3__c.field-meta.xml
<CustomField>
    <fullName>productOptionLevel3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code option niveau 3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pictogrammes personnalisés (Code option niveau 3)</relationshipLabel>
    <relationshipName>Pictogrammes_personnalis_s2</relationshipName>
    <type>Lookup</type>
</CustomField>